[gd_scene load_steps=9 format=3 uid="uid://jp3ejjldvhrn"]

[ext_resource type="Script" path="res://shopScene/scripts/shop_item.gd" id="1_f4hwt"]
[ext_resource type="Texture2D" uid="uid://c4l7j3l2ska2j" path="res://ART/asteroidArts/Ancient Gem.png" id="2_08hl3"]
[ext_resource type="Texture2D" uid="uid://iqnajpomo23a" path="res://ART/uiArts/shopPanel.png" id="3_yaqea"]
[ext_resource type="FontFile" uid="uid://c2n1lpr34y3ud" path="res://ART/resources/pixelFont.ttf" id="4_eyv25"]

[sub_resource type="Animation" id="Animation_8xvot"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_g8snk"]
resource_name = "close"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_fkqdf"]
resource_name = "open"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6jsb5"]
_data = {
"RESET": SubResource("Animation_8xvot"),
"close": SubResource("Animation_g8snk"),
"open": SubResource("Animation_fkqdf")
}

[node name="ShopItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f4hwt")

[node name="Node2D" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("2_08hl3")

[node name="Control2" type="Button" parent="."]
layout_mode = 0
offset_left = -62.0
offset_top = -54.0
offset_right = 60.0
offset_bottom = 56.0
focus_mode = 0
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6jsb5")
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -99.0
offset_top = 48.0
offset_right = 69.0
offset_bottom = 74.0
scale = Vector2(2, 2)
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_eyv25")
bbcode_enabled = true
text = "[center]1020"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_top = 77.0
offset_bottom = 77.0
scale = Vector2(1e-05, 1e-05)
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="Control"]
scale = Vector2(5, 5)
texture = ExtResource("3_yaqea")

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = -150.0
offset_top = -215.0
offset_right = 150.0
offset_bottom = -115.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_eyv25")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "
[center]Iron Rock"

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = -140.0
offset_top = -88.0
offset_right = 216.0
offset_bottom = 391.0
scale = Vector2(0.8, 0.8)
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_eyv25")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true

[node name="dmgLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = -150.0
offset_top = 190.0
offset_right = -65.0
offset_bottom = 226.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_eyv25")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]1055"

[node name="spdLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 65.0
offset_top = 190.0
offset_right = 150.0
offset_bottom = 226.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_eyv25")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]1055"

[node name="RichTextLabel5" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = -155.0
offset_top = 139.0
offset_right = -55.0
offset_bottom = 175.0
theme_override_fonts/normal_font = ExtResource("4_eyv25")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]DMG"

[node name="RichTextLabel6" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 55.0
offset_top = 139.0
offset_right = 155.0
offset_bottom = 175.0
theme_override_fonts/normal_font = ExtResource("4_eyv25")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]SPD"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 60
lifetime = 0.2
one_shot = true
explosiveness = 0.75
randomness = 0.7
lifetime_randomness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
scale_amount_min = 6.0
scale_amount_max = 6.0

[connection signal="mouse_entered" from="Control2" to="." method="_on_control_2_mouse_entered"]
[connection signal="mouse_exited" from="Control2" to="." method="_on_control_2_mouse_exited"]
[connection signal="pressed" from="Control2" to="." method="_on_control_2_pressed"]
